[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicom-phi-scan"
version = "0.1.0"
description = "Two-layer DICOM PHI detection: header tag analysis and OCR pixel inspection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Elijah Rockers", email = "elijah.rockers@gmail.com"}]

dependencies = [
    "pydicom>=2.4.0",
    "Pillow>=10.0.0",
    "easyocr>=1.7",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
dicom-phi-scan = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
